--- a/index.html
+++ b/index.html
@@ -2,11 +2,89 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт интернет-магазин строительных материалов и инструментов для ремонта</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <a class="main-header__logo"><img src="#" alt="Логотип техномарт"></a>
+      <a href="#">Поиск</a>
+      <a href="#">Закладки</a>
+      <a href="#">Корзина</a>
+      <a href="#">Оформить заказ</a>
+      <address class="main-header__address">
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </address>
+      <ul>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Регистрация</a></li>
+      </ul> 
+      <nav class="main-header__navigation">
+       <ul>
+         <li><a>Главная</a></li>
+         <li><a href="#">Компания</a></li>
+         <li><a href="catalog.html">Каталог</a></li>
+         <li><a href="#">Новости</a></li>
+         <li><a href="#">Спецпредложения</a></li>
+         <li><a href="#">Доставка</a></li>
+         <li><a href="#">Контакты</a></li>
+       </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="about-us">
+        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <p class="about-us__lead">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p class="about-us__delivery">Мы можем доставить ваш товар в самые отдаленные точки России!
+            Техномарт работает со многими транспортными компаниями: 
+        </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">Подробнее о компании</a>
+      </section>
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами,  заехав в наш офис:</p>
+        <img class="contacts__map" src="#" alt="Карта">
+        <!--Здесь будет интеракивная карта-->
+        <button class="contacts__button" type="button">Заблудились? НапиШИТЕ НАМ!</button>
+        <!--Здесь будет форма обратной связи-->
+      </section>
+    </main>
+    <footer class="main-footer">
+      <a class="main-footer__logo"><img src="#" alt="Логотип техномарт"></a>
+      <address class="main-footer__address">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p>+7 (812) 555-05-55</p>
+      </address>  
+      <div class="main-footer__navigation">
+        <ul class="footer-menu">
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="partition_menu">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <p class="main-footer__copyright">© 2010–2019 Компания «Техномарт» Все права защищены</p>
+      <ul class="main-footer__social ">
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagramm</a></li>
+      </ul>
+      <p class="main-footer__feedback">Обратная связь: mail@htmlacademy.ru</p>
+      <a class="main-footer__academy-link" href="https://htmlacademy.ru/intensive/htmlcss" title="Профессиональный
+        HTML и CSS, уровень 1">Разработано — htmlacademy.ru</a>
+    </footer>
   </body>
 </html>
