ДЗ №3 Готовим графику

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     
       <div class="header-top">
         <div class="container">
-          <a href="index.html" class="logo"><img src="#" alt="Магазин строительных материалов Техномарт"></a>
+          <a href="index.html" class="logo"><img src="img/logo.png" width="220" height="47" alt="Магазин строительных материалов Техномарт"></a>
           <form action="http://echo.htmlacademy.ru" method="POST">
             <input type="search" id="search" name="search">
             <button type="submit">Поиск</button>
@@ -57,7 +57,7 @@
     <main>
       <article class="catalog">
         <h1 class="visually-hidden">Перфораторы</h1>
-        <div class="catlog-breadcrumbs">
+        <div class="breadcrumbs">
           <a href="index.html">Главная</a>
           <a href="#">Каталог</a>
           <a href="#">Инструмент</a>
@@ -70,7 +70,7 @@
       <div class="top-footer">
         <div class="container">
           <div class="footer-contacts">
-            <a class="logo"><img src="#" alt="Магазин строительных материалов Техномарт"></a>
+            <a class="logo"><img src="img/logo.png" width="220" height="47" alt="Магазин строительных материалов Техномарт"></a>
             <address class="main-footer__address">
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                 <a href="#">+7 (812) 555-05-55</a>
