--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="header">
       <div class="header-top">
         <div class="container">
-          <a class="logo"><img src="#" alt="Магазин строительных материалов Техномарт"></a>
+          <a class="logo"><img src="img/logo.png" width="220" height="47" alt="Магазин строительных материалов Техномарт"></a>
           <form action="http://echo.htmlacademy.ru" method="POST">
               <input type="search" id="search" name="search">
               <button type="submit">Поиск</button>
@@ -79,7 +79,7 @@
       <div class="top-footer">
         <div class="container">
           <div class="footer-contacts">
-            <a class="logo"><img src="#" alt="Магазин строительных материалов Техномарт"></a>
+            <a class="logo"><img src="img/logo.png" width="220" height="47" alt="Магазин строительных материалов Техномарт"></a>
             <address class="main-footer__address">
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                 <a href="#">+7 (812) 555-05-55</a>
