ДЗ №4 Разметил формы

--- a/catalog.html
+++ b/catalog.html
@@ -64,6 +64,15 @@
           <a class="current">Перфораторы</a>
         </div>
       </article>
+
+      <form class="append-cart" action="http://echo.htmlacademy.ru" method="post">
+        <p>Товар добавлен в корзину!</p>
+        <div class="btn-container">
+          <a class="btn" href="#">Оформить заказ</a>
+          <a class="btn" href="#">Продолжить покупки</a>
+        </div>
+        <button type="button" class="form-close">Закрыть</button> 
+      </form>
     </main>
 
     <footer class="footer">
