--- a/catalog.html
+++ b/catalog.html
@@ -141,7 +141,7 @@
               <div class="button-group">
                 <button type="button">Купить</button>
                 <button type="button">В закладки</button>
-              </div>tton type="button">В закладки</button>
+              </div>
             </li>
             <li class="goods-item">
               <img src="img/bfg2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
