--- a/catalog.html
+++ b/catalog.html
@@ -119,6 +119,7 @@
           </form>
         </section>
         <section class="goods">
+          <h2 class="visualy-hidden">Товары</h2>
           <div class="sort">
 
           </div>
