--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="about-shop">Интернет-магазин строительных материалов и инструментов для ремонта</div>
           <address class="address">
-            <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </address>
           <div class="user-auth">
@@ -146,7 +146,7 @@
             <a class="logo">Техномарт</a>
             <address class="main-footer__address">
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-                <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             </address>
           </div> 
           
