--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Техномарт-каталог</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylepref.css">
   </head>
@@ -317,7 +318,7 @@
       <div class="footer-top">
         <div class="container footer-top-inner">
           <div class="footer-contacts">
-            <p class="logo footer-logo"><img src="img/logo-bottom.png" width="138" alt="Логотип Техномарт"></p>
+            <p class="logo footer-logo"><img src="img/logo-bottom.png" width="138" height="23" alt="Логотип Техномарт"></p>
             <address class="footer-address">
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                 <a href="tel:+78125550555">+7 (812) 555-05-55</a>
