Исправления после первой проверки

--- a/catalog.html
+++ b/catalog.html
@@ -319,8 +319,10 @@
     <div class="footer-top">
       <div class="container footer-top-inner">
         <div class="footer-contacts">
-          <a href="index.html" class="logo footer-logo"><img src="img/logo-bottom.png" width="138" height="23"
-              alt="Логотип Техномарт"></a>
+          <a href="index.html" class="logo footer-logo"><span class="visually-hidden">Логотип техномарт</span>
+            <img src="img/logo-bottom.png" width="138" height="23"
+              alt="Логотип Техномарт">
+            </a>
           <address class="footer-address">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
