--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
       <div class="features">
         <div class="slider">
-          <button class="left-btn" type="button"></button>
-          <button class="right-btn" type="button"></button>
-          <button class="slider-controls slider-controls-1"></button>
-          <button class="slider-controls slider-controls-2 slider-controls-active"></button>
+          <button class="left-btn" type="button"><span class="visually-hidden">Влево</span></button>
+          <button class="right-btn" type="button"><span class="visually-hidden">Вправо</span></button>
+          <button class="slider-controls slider-controls-1"><span class="visually-hidden">Слайдер первый</span></button>
+          <button class="slider-controls slider-controls-2 slider-controls-active"><span class="visually-hidden">Слайдер второй</span></button>
           <a class="btn" href="catalog.html">Открыть каталог</a>
           <div class="drills features-slider-active">
             <p>Дрели</p>
@@ -322,7 +322,10 @@
     <div class="footer-top">
       <div class="container footer-top-inner">
         <div class="footer-contacts">
-          <a href="#" class="logo footer-logo"><img src="img/logo-bottom.png" width="138" height="23" alt="Логотип Техномарт"></a>
+          <a href="#" class="logo footer-logo">
+            <span class="visually-hidden">Логотип техномарт</span>
+            <img src="img/logo-bottom.png" width="138" height="23" alt="Логотип Техномарт">
+          </a>
           <address class="footer-address">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
